display checkpoint